[gd_scene load_steps=59 format=3 uid="uid://drux0gpbnnyue"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_go15t"]
[ext_resource type="Texture2D" uid="uid://dpj82tdjkby3c" path="res://assets/plants/nasionko.tlo.png" id="2_llorw"]
[ext_resource type="Texture2D" uid="uid://c0a6pmv3pkpt5" path="res://assets/characters/FIXEDduch.sprite.png" id="2_tbj7p"]
[ext_resource type="Texture2D" uid="uid://vmmqaystvl7p" path="res://assets/plants/nasionko.linia.png" id="3_hr3ax"]
[ext_resource type="Texture2D" uid="uid://bjhkhy1f0oj28" path="res://assets/doniczka.sprite.png" id="3_i05o3"]
[ext_resource type="Texture2D" uid="uid://bkft7aktm6lmw" path="res://assets/ramkagameplay.png" id="4_4kj3c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g61bd"]
atlas = ExtResource("2_tbj7p")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcnsd"]
atlas = ExtResource("2_tbj7p")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_85gwh"]
atlas = ExtResource("2_tbj7p")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x40e"]
atlas = ExtResource("2_tbj7p")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_u42ec"]
atlas = ExtResource("2_tbj7p")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mycj1"]
atlas = ExtResource("2_tbj7p")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6wd8"]
atlas = ExtResource("2_tbj7p")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ullqi"]
atlas = ExtResource("2_tbj7p")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_appm0"]
atlas = ExtResource("2_tbj7p")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv3x4"]
atlas = ExtResource("2_tbj7p")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uipos"]
atlas = ExtResource("2_tbj7p")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_krwmj"]
atlas = ExtResource("2_tbj7p")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8ghb"]
atlas = ExtResource("2_tbj7p")
region = Rect2(2400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6m2e"]
atlas = ExtResource("2_tbj7p")
region = Rect2(2600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucru5"]
atlas = ExtResource("2_tbj7p")
region = Rect2(2800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l0l7"]
atlas = ExtResource("2_tbj7p")
region = Rect2(3000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqnry"]
atlas = ExtResource("2_tbj7p")
region = Rect2(3200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_27uhf"]
atlas = ExtResource("2_tbj7p")
region = Rect2(3400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwmym"]
atlas = ExtResource("2_tbj7p")
region = Rect2(3600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj8fp"]
atlas = ExtResource("2_tbj7p")
region = Rect2(3800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x86ac"]
atlas = ExtResource("2_tbj7p")
region = Rect2(4000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag1o3"]
atlas = ExtResource("2_tbj7p")
region = Rect2(4200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fl47"]
atlas = ExtResource("2_tbj7p")
region = Rect2(4400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho0q4"]
atlas = ExtResource("2_tbj7p")
region = Rect2(4600, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_ndemd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g61bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcnsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85gwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x40e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u42ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mycj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6wd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ullqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_appm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv3x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uipos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krwmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8ghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6m2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucru5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l0l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqnry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27uhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwmym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj8fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x86ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag1o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fl47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho0q4")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_382h2"]
atlas = ExtResource("3_i05o3")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25ik"]
atlas = ExtResource("3_i05o3")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j4kq"]
atlas = ExtResource("3_i05o3")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxveq"]
atlas = ExtResource("3_i05o3")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_odmlf"]
atlas = ExtResource("3_i05o3")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftv84"]
atlas = ExtResource("3_i05o3")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_785bc"]
atlas = ExtResource("3_i05o3")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_u55ft"]
atlas = ExtResource("3_i05o3")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4kw4"]
atlas = ExtResource("3_i05o3")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs2gb"]
atlas = ExtResource("3_i05o3")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uadxd"]
atlas = ExtResource("3_i05o3")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpqmt"]
atlas = ExtResource("3_i05o3")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6or7m"]
atlas = ExtResource("3_i05o3")
region = Rect2(2400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7r3u"]
atlas = ExtResource("3_i05o3")
region = Rect2(2600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2fi"]
atlas = ExtResource("3_i05o3")
region = Rect2(2800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6doko"]
atlas = ExtResource("3_i05o3")
region = Rect2(3000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j01a"]
atlas = ExtResource("3_i05o3")
region = Rect2(3200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4t3r"]
atlas = ExtResource("3_i05o3")
region = Rect2(3400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dikh6"]
atlas = ExtResource("3_i05o3")
region = Rect2(3600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_p64qd"]
atlas = ExtResource("3_i05o3")
region = Rect2(3800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2gtn"]
atlas = ExtResource("3_i05o3")
region = Rect2(4000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkqi7"]
atlas = ExtResource("3_i05o3")
region = Rect2(4200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5348"]
atlas = ExtResource("3_i05o3")
region = Rect2(4400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbjjn"]
atlas = ExtResource("3_i05o3")
region = Rect2(4600, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvkf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_382h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j4kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxveq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odmlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftv84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_785bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u55ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4kw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs2gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uadxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpqmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6or7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7r3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6doko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j01a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4t3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dikh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p64qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2gtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkqi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5348")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbjjn")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rr23o"]
radius = 42.131

[sub_resource type="CircleShape2D" id="CircleShape2D_0vjnu"]
radius = 107.075

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 16393
collision_mask = 16393
script = ExtResource("1_go15t")
speed = 800
friction = 0.06

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Slot1" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -154.0
offset_right = -176.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_llorw")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hr3ax")
expand_mode = 1

[node name="Slot2" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -156.0
offset_right = -52.0
offset_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_llorw")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hr3ax")
expand_mode = 1

[node name="Hold" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -218.0
offset_top = -299.0
offset_right = -114.0
offset_bottom = -195.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_llorw")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Hold"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hr3ax")
expand_mode = 1

[node name="Ramka" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_4kj3c")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -37)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_ndemd")
animation = &"idle"
autoplay = "idle"

[node name="pot" type="AnimatedSprite2D" parent="Sprite2D"]
z_index = 1
position = Vector2(0, -89.94)
sprite_frames = SubResource("SpriteFrames_xvkf4")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9.46)
shape = SubResource("CircleShape2D_rr23o")

[node name="PlantArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlantArea"]
shape = SubResource("CircleShape2D_0vjnu")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -37)
limit_left = -1920
limit_top = -1040
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true
position_smoothing_enabled = true

[connection signal="area_entered" from="PlantArea" to="." method="_on_plant_area_area_entered"]
[connection signal="area_exited" from="PlantArea" to="." method="_on_plant_area_area_exited"]
